--- a/css_floder/seminar.html
+++ b/css_floder/seminar.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>Document</title>
     <style>
-        nav:hover{
-            color:black;
-        }
-        a:visited{
-            color:blue;
-        }
-        button:active{
-            color:brown;
-        }
-        input:focus{
-            border:2px solid rgb(61, 61, 118);
-        }
+a:hover {
+  color: red;               
+  font-size: 20px;
+}
+.r1:visited {
+  color: purple;           
+}
+button:active{
+  background-color:rgb(153, 134, 170);
+  transform: scale(0.9);
+}
+input:focus{
+  border:2px solid blue;
+  outline:none;
+}
     </style>
 </head>
 <body>
-    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a><br><br>
-    <a href="natrue.jpg"><i class="fa-solid fa-user"></i></a><br><br>
-    <button>submit</button><br><br>
-    <input type="text" placeholder="enter name"><br>
-</body>
+    <a href="r1">Hover Example</a>
+    <a href="natrue.jpg">Visited Example</a>
+    <button>Active Example</button>
+    <input type="text" placeholder="Enter Name">
 </html>
